--- a/promptbook/docker-compose.yml
+++ b/promptbook/docker-compose.yml
@@ -2,49 +2,56 @@ version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: laravel-app
-    container_name: laravel-app
-    restart: unless-stopped
-    working_dir: /var/www
+    image: php:8.1-fpm
+    container_name: laravel_app
     volumes:
-      - .:/var/www
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./:/var/www/html
     networks:
-      - laravel
+      - laravel_network
+    depends_on:
+      - db
 
   webserver:
     image: nginx:alpine
-    container_name: nginx-webserver
-    restart: unless-stopped
+    container_name: nginx_server
     ports:
-      - "8000:80"
+      - "8080:80"
     volumes:
-      - .:/var/www
-      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - laravel
+      - laravel_network
+    depends_on:
+      - app
 
   db:
     image: mysql:5.7
-    container_name: mysql-db
-    restart: unless-stopped
+    container_name: mysql_db
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
       MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-    ports:
-      - "3306:3306"
-    networks:
-      - laravel
+      MYSQL_PASSWORD: password
     volumes:
-      - dbdata:/var/lib/mysql
+      - db_data:/var/lib/mysql
+    networks:
+      - laravel_network
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "8081:80"
+    depends_on:
+      - db
+    networks:
+      - laravel_network
 
 networks:
-  laravel:
+  laravel_network:
 
 volumes:
-  dbdata:
+  db_data:
