--- a/promptbook/nginx.conf
+++ b/promptbook/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    root /var/www/public;
+    root /var/www/html/public;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -12,5 +12,9 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
